# Search_engine

./: README.md
src/: CMakeLists.txt  ConverterJSON.cpp  ConverterJSON.h  InvertedIndex.cpp  InvertedIndex.h  Main.cpp  SearchServer.cpp  SearchServer.h
tests/: answers.cpp
